--- a/app/src/main/res/navigation/note_nav.xml
+++ b/app/src/main/res/navigation/note_nav.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/listNoteFragment"
         android:name="com.herdal.notepad.view.ListNoteFragment"
-        android:label="fragment_list_note"
+        android:label="Notes"
         tools:layout="@layout/fragment_list_note" >
         <action
             android:id="@+id/action_listNoteFragment_to_addNoteFragment"
@@ -20,7 +20,7 @@
     <fragment
         android:id="@+id/addNoteFragment"
         android:name="com.herdal.notepad.view.AddNoteFragment"
-        android:label="fragment_add_note"
+        android:label="Add Note"
         tools:layout="@layout/fragment_add_note" >
         <action
             android:id="@+id/action_addNoteFragment_to_listNoteFragment"
@@ -29,7 +29,7 @@
     <fragment
         android:id="@+id/updateNoteFragment"
         android:name="com.herdal.notepad.view.UpdateNoteFragment"
-        android:label="fragment_update_note"
+        android:label="Update Note"
         tools:layout="@layout/fragment_update_note" >
         <action
             android:id="@+id/action_updateNoteFragment_to_listNoteFragment"
