--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        tools:context=".view.AddNoteFragment">
+        tools:context=".view.fragments.note.AddNoteFragment">
 
         <EditText
             android:id="@+id/editTextNote"
