Little padding updates in update-add fragments. Change app's icon

--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -15,6 +15,7 @@
             android:layout_height="290dp"
             android:layout_marginTop="8dp"
             android:background="#B3EAD2"
+            android:padding="6dp"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
