--- a/app/src/main/res/layout/note_row.xml
+++ b/app/src/main/res/layout/note_row.xml
@@ -5,7 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="12dp"
-    android:id="@+id/rowLayout">
+    android:id="@+id/rowLayout"
+    android:background="@drawable/rounded_corner"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp">
 
     <TextView
         android:id="@+id/textView_row_NoteTitle"
@@ -15,7 +20,8 @@
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/textView_row_CreationDate"
