--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -17,6 +17,7 @@
             android:background="#B3EAD2"
             android:ems="10"
             android:gravity="start|top"
+            android:hint="@string/addYourNote"
             android:inputType="textMultiLine"
             android:padding="6dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:ems="10"
-            android:hint="Title"
+            android:hint="@string/title"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
